--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -138,8 +138,21 @@ const last_posts = posts.slice(0, 3);
 </div>
 
 
-<div class="py-20"></div>
- <div class="py-0"><text class="text-lg"> <p align="justify">    Website created in Github & VisualStudio using <a href="https://astro.build/"  target="_blank"><b>Astro<a>  </b> </p> </text> </div>
+<div class="py-5"></div>
+<div class="social-icons px-6 my-2 py-2 flex">
+		<a href="https://www.instagram.com/lydiedramah/" target="_blank" class="mx-3" aria-label="Lydie Dramah" title="Lydie Dramah">
+				<img src="/Thesis.jpg" alt="Lydie Dramah" width="350" height="350"> </img>
+			</a>
+</div>
+
+<div class="py-0"><text class="text-lg"> <p align="center"> <font size="2"> Illustration made by <a href="https://www.instagram.com/lydiedramah/"  target="_blank"><i>lydie dramah<a>  </i> </p> </font>  </text> </div>
+
+
+
+
+<div class="py-10"></div>
+ <div class="py-0"><text class="text-lg"> <p align="center">  <font size="2">   Website created in Github & VisualStudio using <a href="https://astro.build/"  target="_blank"><b>Astro<a>  </b> </p> </font>  
+</text> </div>
 
 
 
