--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -68,6 +68,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Education</div>
   </div>
   <div class="time-line-container grid gap-4 mb-10">
+      <TimeLineElement
+      title="MAS in Toxicology. Risk Assessment, Clinic Toxicology and Ecotoxicology Modules (11 ECTS)"
+      subtitle="2023-Today at University of Geneva (UNIGE), Switzerland"
+    />
+     
      <TimeLineElement
       title="Micro-bachelor degree (60 ECTS) in Sustainability and Strategies Against Climate Change"
       subtitle="2023-Today at UNED, Spain"
@@ -134,6 +139,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Participation in conferences</div>
   </div>
   <div class="time-line-container grid gap-4 mb-10">
+     <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2021 -  Oral communication - Online" />
      <TimeLineElement title="Society for Behavioral Neuroendocrinology meeting (SBN)"  subtitle="2019 - Poster presentation - Bloomington, Indiana, USA" />
      <TimeLineElement title="European Congress for Endocrinology (ECE)"  subtitle="2019 - Oral communication  - Lyon, France" />
       <TimeLineElement title="Endocrine Society meeting"  subtitle="2019 - Oral communication - New Orleans, Louisiana, USA" />
@@ -201,15 +207,6 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </ul>
 
 
-      <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Institutional responsabilities</div>
-  </div>
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
-    <li>
-      <a target="_blank">2009-2012: Member of the delegation of students of the Faculty of Psychology (University of La Laguna, Spain)</a>
-    </li>
-   
-  </ul>
 
 
   <div class="mb-5">
