--- a/src/pages/p1.astro
+++ b/src/pages/p1.astro
@@ -4,8 +4,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
 
-
-
 <BaseLayout title = "EDC project - David Lopez Rodriguez">
 
 
@@ -19,14 +17,58 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 <div class="social-icons px-6 my-2 py-2 flex">
-		<a href="/p1.webp" target="_blank" class="mx-3" aria-label="EDCs" title="EDCs">
-				<img src="/p1.webp" alt="Italian Trulli" width="700" height="800"> </img>
+		<a href="/p1.png" target="_blank" class="mx-3" aria-label="EDCs" title="EDCs">
+				<img src="/p1.png" alt="Italian Trulli" width="700" height="800"> </img>
 			</a>
 </div>
 
 
  <div class="py-4">
- <text class="text-lg"><p align="justify">  <b>	Abstract:</b> Global concerns have been raised over the potential adverse effects of exposure to chemicals that interfere with the endocrine system of humans and wildlife. Because of their widespread presence, persistency and their myriad of mechanisms of actions, Endocrine Disrupting Chemicals (EDCs) are complex to identify and evaluate. Currently, worldwide regulatory agencies urge scientists to find alternative methodologies replacing in vivo models to improve the risk assessment of EDCs. The present research project aims to create a framework to identify and prioritize the risk assessment of EDCs under European regulations. To do that, we will (a) generate an in silico exploratory tool to visualize chemicals and their properties, (b) implement a machine learning approach to rank EDCs of concern and (c) validate the most concerning chemicals using in vitro assays. Our project aims to develop an open-source tool to improve the evaluation of endocrine disruptors, thereby promoting a shift in EU chemical regulations towards a toxic-free environment. </p> </text>
+ <text class="text-lg"><p align="justify">  
+ 
+ <b>Summary.</b>
+ We are currently facing a global health and environmental challenge due to the increasing presence of chemicals interfering with 
+ the endocrine system in our environment. Endocrine Disrupting Chemicals (EDCs) are natural or synthetic compounds that alter the 
+ hormonal and homeostatic systems, resulting in adverse health effects through environmental or inappropriate developmental exposures. 
+ Developmental exposure to EDCs has been widely associated with health disorders such as infertility, metabolic diseases, and cancer. </p>
+
+ <p align="justify">  
+ <br>
+ EDCs are difficult to identify and evaluate because of their persistence and their complex mechanisms of action. From more than 140.000 
+ compounds authorized for its commercial use in Europe, only 17 has been identified as EDCs by Swiss and European regulatory agencies. 
+ Chemical evaluation and screening is currently slow, costly and heavily based on in vivo-based evidence. Chemicals are asessed one at a 
+ time, making the evaluation of EDC-activity of 140.000 compounds untenable. As a result, regulatory measures are lagging behind in 
+ protecting society. International bodies such as the World Health Organization (WHO) increasingly acknowledge the urge to find new 
+ alternative methodologies (NAMs) to improve the identification and evaluation of EDCs. </p>
+
+ <p align="justify">  
+ <br>
+In this project, <u>I aim to generate an integrative and multidisciplinary New Alternative Methodology (NAM) based on Artificial Intelligence (AI) 
+to identify and rank novel and unknown EDCs under Swiss and European regulations  </u>. First, I will (<b>A</b>) generate an in silico exploratory 
+tool to visualize the physicochemical, toxicological, ecotoxicological, and regulatory properties of 140.000 chemicals relevant in the 
+Swiss and European regulatory context. This exploratory tool will be based on TMAP, an AI-based algorithm of dimensionality reduction, 
+allowing the organization and clustering of chemicals based on their structural similarity and properties. A database containing chemical 
+properties will be generated using information from curated repositories. Secondly, I will (<b>B</b>) implement a machine learning approach to 
+identify and rank EDCs of concern. Unsupervised and semisupervised machine learning algorithms (i.e., random forest, deep learning) will 
+be trained using a subset of known EDCs and applied to identify unknown chemicals. Finally, to improve the transparency of the model, the 
+SHAP game theory algorithm will be used to identify chemical properties that contribute the most to the classification (e.g., estrogenic, 
+thyroid). </p>
+
+<p align="justify"> 
+<br>
+Globally, this innovative project aims at developing an integrative and open-source methodology to improve the identification and evaluation 
+of potential EDCs, thereby improving animal welfare and public health and promoting a shift in EU chemical regulations towards a toxic-free 
+environment. This project is particularly timely as the European Commission announced its intention to include Endocrine Disruption as a new 
+hazard class to the REACH  European Chemical legislation in 2023. Finally, my innovative methodology can be applied to identify chemical 
+hazards from alternative toxicological classes.  </p>
+<p align="justify"> 
+<br>
+This project will be held at the Department of Environmental Science at the University of Lausanne (UNIL), Switzerland.</p>
+
+ 
+ 
+ 
+ </p> </text>
  </div>
 
 
