--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,15 +17,16 @@ const last_posts = posts.slice(0, 3);
           <div class="text-2xl py-2 font-bold">Research fellow - University of Lausanne</div>
 
           <div class="py-2"><text class="text-lg"> <p align="justify">
-              As a multidisciplinary researcher, my focus lies in identifying and prioritizing the risk assessment of environmental chemicals. My passion for this field stems from the pressing need to evaluate the impact of chemicals on human health and the environment. With expertise in multiple disciplines, including toxicology, environmental science, and bioinformatics, I strive to develop a comprehensive understanding of the potential risks associated with chemical exposures.
-           </p> </text> </div>
+              As a multidisciplinary researcher, my focus lies in creating computational tools allowing to advance scientific knowledge and improve public health and environmental policies. Today, with an expertise in biology, toxicology, environmental and computational sciences, I strive to develop a comprehensive understanding of the risks associated with chemical exposures and gain an understanding on the biological process involved in the control of metabolism.            
+            
+              </p> </text> </div>
 
            <div class="py-4">
-           <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> Toxicology, Bioinformatics, Endocrinology, Environmental Science, Public Health, Risk assessment </p> </text>
+           <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> Toxicology, Bioinformatics, Endocrinology, Environmental Science, Public Health, Risk assessment. </p> </text>
            </div>
            
   
-           <text class="text-lg"><p align="justify">  <b>	Skills and expertise:</b> Bioinformatics, Chemo-informatics, Neuroendocrinology, Environmental Sciences, Environmental Health, Endocrine Disruption, Toxicology, Computational Biology, Adverse outcome pathways, Chemical Risk Assessment, Environmental Pollution, Data Analysis, Estrogens, Molecular Biology, Physiology, Reproductive Toxicology, Xenobiotics  </p> </text>
+           <text class="text-lg"><p align="justify">  <b>	Skills and expertise:</b> Bioinformatics, Chemo-informatics, Neuroendocrinology, Environmental Sciences, Environmental Health, Endocrine Disruption, Toxicology, Computational Biology, Adverse outcome pathways, Chemical Risk Assessment, Environmental Pollution, Data Analysis, Estrogens, Molecular Biology, Physiology, Reproductive Toxicology, Xenobiotics.  </p> </text>
        
 
 
