--- a/src/pages/p2.astro
+++ b/src/pages/p2.astro
@@ -55,10 +55,18 @@ tanycyte-cell interactions during a fast-refeeding paradigm.  </p>
 This project will ultimately allow us to determine the entire regulatory network interconnected to tanycytes and the dynamics in its transcriptional 
 profile. Understanding the plasticity of this network will enable the scientific community to better apprehend the central control of metabolism,  
 provide novel tools to study the pathophysiology of metabolic syndromes, and offer, at term, more targeted treatments.   </p>
+
+
 <p align="justify"> 
 <br>
+This project will be held at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
+(Department of Biomedical Sciences, University of Lausanne, Switzerland).</p>
 
-This project will be held at the Fanny Langlet's laboratory (Department of Biomedical Sciences, University of Lausanne, Switzerland).</p>
+ 
+
+   
+
+
 
  
  
