--- a/src/pages/p3.astro
+++ b/src/pages/p3.astro
@@ -70,7 +70,10 @@ insights into molecular diversity underlying tanycyte classification. </p>
  </div>
 
 
-
+ <p align="justify"> 
+<br>
+This project will be held at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
+(Department of Biomedical Sciences, University of Lausanne, Switzerland).</p>
 
  
 
