--- a/src/pages/p4.astro
+++ b/src/pages/p4.astro
@@ -69,7 +69,10 @@ third ventricle.</p>
  </div>
 
 
-
+ <p align="justify"> 
+<br>
+This project was held at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
+(Department of Biomedical Sciences, University of Lausanne, Switzerland).</p>
 
  
 
