--- a/src/pages/p5.astro
+++ b/src/pages/p5.astro
@@ -17,59 +17,51 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 <div class="social-icons px-6 my-2 py-2 flex">
-		<a href="/ontogeny3.png" target="_blank" class="mx-3" aria-label="Tanycyte Ontogeny" title="Tanycyte Ontogeny">
-				<img src="/ontogeny3.png" alt="Tanycyte Ontogeny" width="800" height="800"> </img>
+		<a href="/AOP2.png" target="_blank" class="mx-3" aria-label="AOPs" title="AOPs">
+				<img src="/AOP2.png" alt="AOPs" width="800" height="800"> </img>
 			</a>
 </div>
 
 
  <div class="py-4"> <text class="text-lg">
  
- <p align="justify"> Research part of the Horizon 2020 FREIA Project, aiming at improving the identification of chemicals that affect women’s health via disruption of the hormone system <p>
+ <p align="justify"> Research part of the <a href="http://freiaproject.eu/wp/" target="_blank"><i> Horizon 2020 FREIA Project</i></a>, aiming 
+ at improving the identification of chemicals that affect women’s health via disruption of the hormone system. <p>
+
 
  
+ 
  <p align="justify">  
+ <br>
  <b>Related publications</b> </p>
+
+ <div class="text-lg"><p align="justify"><a href=" https://www.karger.com/Article/FullText/515478" target="_blank"> Franssen D, Svingen T, <u>Lopez-Rodriguez D</u>, Van Duursen M, Boberg J, Parent AS.<i> A putative adverse outcome pathway network for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals.</i> <b>Neuroendocrinology</b>. 2021 Feb 26 </div>
+ </p></a><br>
+
   <div class="text-lg"> <p align="justify"> <a href="https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full" target="_blank">   Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. <i> Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. </i> <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
  </p></a><br>
 
-<div class="text-lg"><p align="justify"><a href=" https://www.karger.com/Article/FullText/515478" target="_blank"> Franssen D, Svingen T, <u>Lopez-Rodriguez D</u>, Van Duursen M, Boberg J, Parent AS.<i> A putative adverse outcome pathway network for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals.</i> <b>Neuroendocrinology</b>. 2021 Feb 26 </div>
- </p></a><br>
-
-
-
-
-
-  
   <p align="justify">  
  <br>
   
+
+ <b>Summary.</b> The average age for pubertal onset in girls has declined over recent decades. Epidemiological studies in humans and experimental 
+ studies in animals suggest a causal role for endocrine disrupting chemicals (EDCs) that are present in our environment. Of concern, current 
+ testing and screening regimens are inadequate in identifying EDCs that may affect pubertal maturation, not least because they do not consider 
+ early-life exposure. Also, the causal relationship between EDC exposure and pubertal timing is still a matter of debate. To address this issue,
+ we have used current knowledge to elaborate a network of putative adverse outcome pathways (pAOPs) to identify how chemicals can affect pubertal 
+ onset. By using the AOP framework, we highlight current gaps in mechanistic understanding that need to be addressed and simultaneously point 
+ towards events causative of pubertal disturbance that could be exploited for alternative test methods. We propose 6 pAOPs that could explain 
+ the disruption of pubertal timing by interfering with the central hypothalamic trigger of puberty, GnRH neurons, and by so doing highlight 
+ specific modes of action that could be targeted for alternative test method development. </p>
  
-
- <b>Summary.</b> During hypothalamic development, the germinative neuroepithelium gives birth to diverse neural cells that regulate numerous 
- physiological functions in adulthood.</p>
- <p align="justify">  
+  <p align="justify">  
  <br>
-
-Here, we studied the ontogeny of ependymal cells in the mouse mediobasal hypothalamus using the BrdU approach and publicly available 
-single-cell RNAseq datasets.</p>
- <p align="justify">  
- <br>
-
-We observed that while typical ependymal cells are mainly produced at E13, tanycyte birth depends on time and subtypes and lasts 
-up to P8. Typical ependymocytes and β tanycytes are the first to arise at the top and bottom of the dorsoventral axis around E13, whereas 
-α tanycytes emerge later in development, generating an outside-in dorsoventral gradient along the third ventricle. Additionally, α tanycyte 
-generation displayed a rostral-to-caudal pattern. Finally, tanycytes mature progressively until they reach transcriptional maturity between 
-P4 and P14.</p>
- <p align="justify">  
- <br>
-
-Altogether, this data shows that ependyma generation differs in time and distribution, highlighting the heterogeneity of the 
-third ventricle.</p>
- <p align="justify">  
- <br>
+ This project was held at the <a href="https://www.giga.uliege.be/cms/c_4113283/en/giga-directory?uid=u187924/" target="_blank"><i>laboratory of Prof. Anne-Simone Parent</i></a>
+ (GIGA-Neuroscience, University of Liege, Belgium).</p>
 
 
+  
 
 
  
