--- a/src/pages/p4.astro
+++ b/src/pages/p4.astro
@@ -26,12 +26,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  <div class="py-4"> <text class="text-lg">
  
  
- <p align="justify">  
- <b>Related publication</b> </p>
-  <div class="text-lg"><p align="justify"><a href="https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full" target="_blank">   <u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F.<i> Ontogeny of ependymoglial cells lining the third ventricle in mice.</i> <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759  </div>
- </p></a><br>
-
-  
   <p align="justify">  
  <br>
   
@@ -56,27 +50,31 @@ P4 and P14.</p>
  <br>
 
 Altogether, this data shows that ependyma generation differs in time and distribution, highlighting the heterogeneity of the 
-third ventricle.</p>
+third ventricle.
+<br></p>
  <p align="justify">  
- <br>
-
-
 
 
  
- 
- </p> </text>
- </div>
+
+  </div>
 
 
- <p align="justify"> 
-<br>
+<p align="justify"> <br>
 This project was held at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
-(Department of Biomedical Sciences, University of Lausanne, Switzerland).</p>
+(Department of Biomedical Sciences, University of Lausanne, Switzerland).
+<br>
+</p>
 
  
 
+  <p align="justify">  
+  <br>
+ <b>Related publication</b> </p>
+  <div class="text-lg"><font size="3"><p align="justify"><a href="https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full" target="_blank">   <u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F.<i> Ontogeny of ependymoglial cells lining the third ventricle in mice.</i> <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759  </div>
+ </font></p></a><br>
 
+   </p> </text>
 
  
 </BaseLayout>
