--- a/src/pages/p5.astro
+++ b/src/pages/p5.astro
@@ -31,20 +31,11 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
  
  
- <p align="justify">  
- <br>
- <b>Related publications</b> </p>
-
- <div class="text-lg"><p align="justify"><a href=" https://www.karger.com/Article/FullText/515478" target="_blank"> Franssen D, Svingen T, <u>Lopez-Rodriguez D</u>, Van Duursen M, Boberg J, Parent AS.<i> A putative adverse outcome pathway network for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals.</i> <b>Neuroendocrinology</b>. 2021 Feb 26 </div>
- </p></a><br>
-
-  <div class="text-lg"> <p align="justify"> <a href="https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full" target="_blank">   Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. <i> Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. </i> <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
- </p></a><br>
+ 
 
   <p align="justify">  
  <br>
   
-
  <b>Summary.</b> The average age for pubertal onset in girls has declined over recent decades. Epidemiological studies in humans and experimental 
  studies in animals suggest a causal role for endocrine disrupting chemicals (EDCs) that are present in our environment. Of concern, current 
  testing and screening regimens are inadequate in identifying EDCs that may affect pubertal maturation, not least because they do not consider 
@@ -58,9 +49,19 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <p align="justify">  
  <br>
  This project was held at the <a href="https://www.giga.uliege.be/cms/c_4113283/en/giga-directory?uid=u187924/" target="_blank"><i>laboratory of Prof. Anne-Simone Parent</i></a>
- (GIGA-Neuroscience, University of Liege, Belgium).</p>
+ (GIGA-Neuroscience, University of Liege, Belgium). <br></p>
 
 
+
+ <p align="justify">  
+ <br>
+ <b>Related publications</b> </p>
+
+ <div class="text-lg"><font size="3"><p align="justify"><a href=" https://www.karger.com/Article/FullText/515478" target="_blank"> Franssen D, Svingen T, <u>Lopez-Rodriguez D</u>, Van Duursen M, Boberg J, Parent AS.<i> A putative adverse outcome pathway network for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals.</i> <b>Neuroendocrinology</b>. 2021 Feb 26 </div>
+ </font></p></a><br>
+
+  <div class="text-lg"><font size="3"> <p align="justify"> <a href="https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full" target="_blank">   Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. <i> Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. </i> <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
+ </font></p></a><br>
   
 
 
