--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -145,7 +145,7 @@ const last_posts = posts.slice(0, 3);
 			</a>
 </div>
 
-<div class="py-0"><text class="text-lg"> <p align="center"> <font size="2"> Illustration made by <a href="https://www.instagram.com/lydiedramah/"  target="_blank"><i>lydie dramah<a>  </i> </p> </font>  </text> </div>
+<div class="py-0"><text class="text-lg"> <p align="center"> <font size="2"> Illustration by <a href="https://www.instagram.com/lydiedramah/"  target="_blank"><i>lydie dramah<a>  </i> </p> </font>  </text> </div>
 
 
 
