--- a/src/pages/p1.astro
+++ b/src/pages/p1.astro
@@ -63,7 +63,7 @@ hazard class to the REACH  European Chemical legislation in 2023. Finally, my in
 hazards from alternative toxicological classes.  </p>
 <p align="justify"> 
 <br>
-This project will be held at the Department of Environmental Science at the University of Lausanne (UNIL), Switzerland.</p>
+Project ongoing at the Department of Environmental Science at the University of Lausanne (UNIL), Switzerland.</p>
 
  
  
