--- a/src/pages/p2.astro
+++ b/src/pages/p2.astro
@@ -59,7 +59,7 @@ provide novel tools to study the pathophysiology of metabolic syndromes, and off
 
 <p align="justify"> 
 <br>
-This project will be held at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
+Project ongoing at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
 (Department of Biomedical Sciences, University of Lausanne, Switzerland).</p>
 
  
