--- a/src/pages/p4.astro
+++ b/src/pages/p4.astro
@@ -57,7 +57,6 @@ third ventricle.
 
  
 
-  </div>
 
 
 <p align="justify"> <br>
@@ -74,7 +73,9 @@ This project was held at the <a href="https://wp.unil.ch/langletlab/" target="_b
   <div class="text-lg"><font size="3"><p align="justify"><a href="https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full" target="_blank">   <u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F.<i> Ontogeny of ependymoglial cells lining the third ventricle in mice.</i> <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759  </div>
  </font></p></a><br>
 
-   </p> </text>
+    </text>
+ 
+ </div>
 
  
 </BaseLayout>
