--- a/src/pages/p3.astro
+++ b/src/pages/p3.astro
@@ -66,17 +66,15 @@ insights into molecular diversity underlying tanycyte classification. </p>
  
  
  
- </p> </text>
- </div>
+
+ 
 
 
  <p align="justify"> 
 <br>
-This project will be held at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
-(Department of Biomedical Sciences, University of Lausanne, Switzerland).</p>
-
- 
-
+Project ongoingd at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
+(Department of Biomedical Sciences, University of Lausanne, Switzerland).</p></text>
+</div>
 
 
  
