--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,11 @@ const today = new Date();
 ---
 
 <footer class="footer footer-center block mb-5 pt-10">
-  <div class="pb-2">
+  <div class="pb-2"><font size="1.5">  
+    
     &copy; {today.getFullYear()} David Lopez Rodriguez
+</font>  
+
   </div>
  
 </footer>
