--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -16,14 +16,14 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
   <ul class="list-disc md:columns-3 columns-1 mx-6">
     <li>Toxicology</li>
-   <li>Computational biology</li>
+    <li>Computational biology</li>
     <li>Molecular biology</li>
-  <li>Bioinformatics</li>
-  <li>Risk asessment</li>
+    <li>Bioinformatics</li>
+    <li>Risk asessment</li>
     <li>Neuroendocrinology</li>
-   <li>Epigenetics</li>
+    <li>Epigenetics</li>
     <li>Advanced Statistics</li>
- <li>Chemo-informatics</li>
+    <li>Chemo-informatics</li>
     <li>Physiology</li>
     <li>R (RStudio)</li>
     <li>Python (Anaconda, PyCharm)</li>
@@ -33,18 +33,18 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <li>QSAR</li>
     <li>In silico methods</li>
     <li>Version control (Git)</li>
-   <li>Adobe Photoshop</li>
-    <li>Web design: astro</li>
-     <li>scRNAseq</li>
-   <li>RNAseq</li>
+    <li>Adobe Photoshop</li>
+    <li>Web design </li>
+    <li>scRNAseq</li>
+    <li>RNAseq</li>
     <li>qPCR</li>
     <li>FACS</li>
     <li>ChipSEQ</li>
     <li>Cut&Run</li>
-   <li>IHC</li>
-   <li>WB</li>
-   <li>Microscopy</li>
-   <li>ELISA</li>
+    <li>IHC</li>
+    <li>WB</li>
+    <li>Microscopy</li>
+    <li>ELISA</li>
   </ul>
     </div>
 
@@ -134,7 +134,22 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <TimeLineElement title="Bachelor’s scholarships"  subtitle="2008-2013 - Ministry of Education, Culture and Sports (Spain)" />
   </div>
 
-
+     <div class="mb-5">
+    <div class="text-3xl w-full font-bold">Continuous Education</div>  </div> 
+  <ul class="list-disc mx-6 mb-10 grid gap-2"> 
+  
+  <li> <a target="_blank">Environmental History. University of Gothenburg, Sweden (15 ECTS) </a> </li>
+  <li> <a target="_blank">UCREATE2. Workshop on sustainable entrepreneurship (7 weeks)</a> </li>
+  <li> <a target="_blank">Introduction to Machine learning. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)</a> </li>
+  <li> <a target="_blank">UNIX Shell Scripting for Life Scientists. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)  </a> </li>
+  <li> <a target="_blank">Intermediate Python. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)  </a> </li>
+  <li> <a target="_blank">Workshop on Epigenomics Data Analysis. CUSO (3 days)  </a> </li>
+  <li> <a target="_blank">First Steps in Parallelization with OpenMP. Swiss Institute of Bioinformatics (SIB)  </a> </li>
+  <li> <a target="_blank">Research - A Gentle Introduction to Deep Learning with Python and R.  University of Lausanne (Switzerland) (1 day)  </a> </li>
+  <li> <a target="_blank">DCSR: using HPC cluster and requirements. University of Lausanne (Switzerland) (1 day)  </a> </li>
+  <li> <a target="_blank">Statistics 1. Resal, University of Lausanne (Switzerland) (1 day)  </a> </li>
+  <li> <a target="_blank"> Statistics 2. Resal, University of Lausanne (Switzerland) (1 day) </a> </li>
+  </ul>
      <div class="mb-5">
     <div class="text-3xl w-full font-bold">Participation in conferences</div>
   </div>
@@ -206,6 +221,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
      
   </ul>
 
+
+  
 
 
 
