--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -27,7 +27,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <li>Physiology</li>
     <li>R (RStudio)</li>
     <li>Python (Anaconda, PyCharm)</li>
-    <li>UNIX</li>
+    <li>UNIX/Shell</li>
     <li>High-perf. computing (HPC)</li>
     <li>Machine learning</li>
     <li>QSAR</li>
