--- a/src/pages/p3.astro
+++ b/src/pages/p3.astro
@@ -30,7 +30,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <p align="center">  
   <br>
   
-  <b> ... BioRxiv preprint comming soon ...</b> </p>
+  <b> ... BioRxiv preprint coming soon ...</b> </p>
   <p align="justify">  
 
 
