--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -12,15 +12,49 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  </p></a>
  <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank"><text class="text-lg"> <b>Download</b> </text></p></a>
 
+     <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts in preparation (as of 05/23)</div>
+  <div class="divider my-0"></div>
+  
+<div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. </i>  </p> </div>
+<div class="text-lg"> <p align="justify" style="margin-left: 20px">  &#8594; *Co-first authorship</p> </div>
+<div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b>  &#8594; ...BioRxiv preprint coming soon...</b> </p> </div>
+<br>
+
+<div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i>  </p> </div><br>
+
+
+<div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u> Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i>  </p> </div>
+
+
+
+
+
+
+
+
     <div class="text-2xl w-full font-bold mb-0 mt-10">Peer-reviewed scientific articles</div>
   <div class="divider my-0"></div>
  
- <div class="text-lg"> <p align="justify"> <a href="https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full" target="_blank">   Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. <i> Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. </i> <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
+ <div class="text-lg">  <p align="justify"> <a href="https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full" target="_blank">  Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. <i> Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. </i> <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
  </p></a><br>
-<div class="text-lg"><p align="justify"><a href="https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full" target="_blank">   <u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F.<i> Ontogeny of ependymoglial cells lining the third ventricle in mice.</i> <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759  </div>
+<div class="text-lg"><p align="justify"><a href="https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full" target="_blank">  <u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F.<i> Ontogeny of ependymoglial cells lining the third ventricle in mice.</i> <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759  </div>
  </p></a><br>
-<div class="text-lg"><p align="justify"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP8795" target="_blank"> <u>Lopez-Rodriguez D</u>, Aylwin CF, Delli V, Sevrin E, Campanile M, Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS. <i>Multi- and Transgenerational Outcomes of an Exposure to a Mixture of Endocrine-Disrupting Chemicals (EDCs) on Puberty and Maternal Behavior in the Female Rat.</i> <b>Environ Health Perspect</b>. 2021 Aug;129(8):87003  </div>
- </p></a><br>
+<div class="text-lg"><p align="justify"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP8795" target="_blank">  <u>Lopez-Rodriguez D</u>, Aylwin CF, Delli V, Sevrin E, Campanile M, Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS. <i>Multi- and Transgenerational Outcomes of an Exposure to a Mixture of Endocrine-Disrupting Chemicals (EDCs) on Puberty and Maternal Behavior in the Female Rat.</i> <b>Environ Health Perspect</b>. 2021 Aug;129(8):87003  </div>
+ </p></a>
+
+ 
+
+ <div class="text-lg"><p align="justify" style="margin-left: 20px"><a href=" https://ehp.niehs.nih.gov/curated-collections/eds-choice-2021" target="_blank"> &#8594; Article selected as one of the 15 papers included in the 2021 Editors' Choice Collection of Environmental Health Perspectives (EHP). </div>
+ </p></a>
+  <div class="text-lg"><p align="justify" style="margin-left: 20px"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP9560" target="_blank"> &#8594; <b> Associated Invited perspective article</b>: Levin E. <i> Does Developmental Adaptation Pose Risks with Changing Toxicant Exposures?</i> Environ Health Perspect. 2021. Vol. 129, No. 8.   </div>
+ </p></a>
+
+ 
+  
+ <br>
+
+
+
 <div class="text-lg"> <p align="justify"><a href="https://www.nature.com/articles/s41574-020-00436-3" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Bakker J, Lomniczi A, Parent AS. <i>Cellular and molecular features of EDC exposure: consequences for the GnRH network.</i> <b>Nature Reviews Endocrinology</b>. 2021 Feb;17(2):83-96  </div>
  </p></a><br>
 <div class="text-lg"> <p align="justify"><a href="https://academic.oup.com/endo/article/160/11/2558/5565236?login=false" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Sevrin E, Gérard A, Balsat C, Blacher S, Noël A, Parent AS. <i>Persistent vs Transient Alteration of Folliculogenesis and Estrous Cycle After Neonatal vs Adult Exposure to Bisphenol A.</i> <b>Endocrinology</b> 160, 2558–2572 (2019) </div>
