--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const last_posts = posts.slice(0, 3);
           <div class="text-2xl py-2 font-bold">Research fellow - University of Lausanne</div>
 
           <div class="py-2"><text class="text-lg"> <p align="justify">
-              As a multidisciplinary researcher, my focus lies in creating computational tools allowing to advance scientific knowledge and improve public health and environmental policies. Today, with an expertise in biology, toxicology, environmental and computational sciences, I strive to develop a comprehensive understanding of the risks associated with chemical exposures and gain an understanding on the biological process involved in the control of metabolism.            
+              As a multidisciplinary researcher, my focus lies in creating computational tools allowing to advance scientific knowledge to improve public health and environmental policies. Today, with an expertise in biology, toxicology, environmental and computational sciences, I strive to develop a comprehensive understanding of the risks associated with chemical exposures and gain an understanding on the biological process involved in the control of metabolism.            
             
               </p> </text> </div>
 
