--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const last_posts = posts.slice(0, 3);
               </p> </text> </div>
 
            <div class="py-4">
-           <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> Toxicology, Bioinformatics, Endocrinology, Environmental Science, Public Health, Risk assessment. </p> </text>
+           <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> Toxicology, Bioinformatics, Endocrinology, Environmental Science, Public Health, Chemical Risk assessment. </p> </text>
            </div>
            
   
