--- a/src/pages/Timeline/Timeline.astro
+++ b/src/pages/Timeline/Timeline.astro
@@ -1,134 +1,44 @@
 ﻿<script>
-(function () {
-  // VARIABLES
-  const timeline = document.querySelector(".timeline ol"),
-    elH = document.querySelectorAll(".timeline li > div"),
-    arrows = document.querySelectorAll(".timeline .arrows .arrow"),
-    arrowPrev = document.querySelector(".timeline .arrows .arrow__prev"),
-    arrowNext = document.querySelector(".timeline .arrows .arrow__next"),
-    firstItem = document.querySelector(".timeline li:first-child"),
-    lastItem = document.querySelector(".timeline li:last-child"),
-    xScrolling = 280,
-    disabledClass = "disabled";
+	// VARIABLES
+	const elH = document.querySelectorAll(".timeline li > div");
 
-  // START
-  window.addEventListener("load", init);
+	// START
+	window.addEventListener("load", init);
 
-  function init() {
-    setEqualHeights(elH);
-    animateTl(xScrolling, arrows, timeline);
-    setSwipeFn(timeline, arrowPrev, arrowNext);
-    setKeyboardFn(arrowPrev, arrowNext);
-  }
+	function init() {
+	setEqualHeights(elH);
+	}
 
-  // SET EQUAL HEIGHTS
-  function setEqualHeights(el) {
-    let counter = 0;
-    for (let i = 0; i < el.length; i++) {
-      const singleHeight = el[i].offsetHeight;
+	// SET EQUAL HEIGHTS
+	function setEqualHeights(el) {
+	let counter = 0;
+	for (let i = 0; i < el.length; i++) {
+    const singleHeight = el[i].offsetHeight;
 
-      if (counter < singleHeight) {
-        counter = singleHeight;
-      }
-    }
-
-    for (let i = 0; i < el.length; i++) {
-      el[i].style.height = `${counter}px`;
+    if (counter < singleHeight) {
+      counter = singleHeight;
     }
   }
 
-  // CHECK IF AN ELEMENT IS IN VIEWPORT
-  // http://stackoverflow.com/questions/123999/how-to-tell-if-a-dom-element-is-visible-in-the-current-viewport
-  function isElementInViewport(el) {
-    const rect = el.getBoundingClientRect();
-    return (
-      rect.top >= 0 &&
-      rect.left >= 0 &&
-      rect.bottom <=
-        (window.innerHeight || document.documentElement.clientHeight) &&
-      rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-    );
+  for (let i = 0; i < el.length; i++) {
+    el[i].style.height = `${counter}px`;
   }
+}
 
-  // SET STATE OF PREV/NEXT ARROWS
-  function setBtnState(el, flag = true) {
-    if (flag) {
-      el.classList.add(disabledClass);
-    } else {
-      if (el.classList.contains(disabledClass)) {
-        el.classList.remove(disabledClass);
-      }
-      el.disabled = false;
-    }
-  }
-
-  // ANIMATE TIMELINE
-  function animateTl(scrolling, el, tl) {
-    let counter = 0;
-    for (let i = 0; i < el.length; i++) {
-      el[i].addEventListener("click", function () {
-        if (!arrowPrev.disabled) {
-          arrowPrev.disabled = true;
-        }
-        if (!arrowNext.disabled) {
-          arrowNext.disabled = true;
-        }
-        const sign = this.classList.contains("arrow__prev") ? "" : "-";
-        if (counter === 0) {
-          tl.style.transform = `translateX(-${scrolling}px)`;
-        } else {
-          const tlStyle = getComputedStyle(tl);
-          // add more browser prefixes if needed here
-          const tlTransform =
-            tlStyle.getPropertyValue("-webkit-transform") ||
-            tlStyle.getPropertyValue("transform");
-          const values =
-            parseInt(tlTransform.split(",")[4]) +
-            parseInt(`${sign}${scrolling}`);
-          tl.style.transform = `translateX(${values}px)`;
-        }
-
-        setTimeout(() => {
-          isElementInViewport(firstItem)
-            ? setBtnState(arrowPrev)
-            : setBtnState(arrowPrev, false);
-          isElementInViewport(lastItem)
-            ? setBtnState(arrowNext)
-            : setBtnState(arrowNext, false);
-        }, 1100);
-
-        counter++;
-      });
-    }
-  }
-
-  // ADD SWIPE SUPPORT FOR TOUCH DEVICES
-  function setSwipeFn(tl, prev, next) {
-    const hammer = new Hammer(tl);
-    hammer.on("swipeleft", () => next.click());
-    hammer.on("swiperight", () => prev.click());
-  }
-
-  // ADD BASIC KEYBOARD FUNCTIONALITY
-  function setKeyboardFn(prev, next) {
-    document.addEventListener("keydown", (e) => {
-      if (e.which === 37 || e.which === 39) {
-        const timelineOfTop = timeline.offsetTop;
-        const y = window.pageYOffset;
-        if (timelineOfTop !== y) {
-          window.scrollTo(0, timelineOfTop);
-        }
-        if (e.which === 37) {
-          prev.click();
-        } else if (e.which === 39) {
-          next.click();
-        }
-      }
-    });
-  }
-})();
 </script>
 <style>
+
+	@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
+	:root {
+	--white: #fff;
+	--black: #323135;
+	--crystal: #E5E5E5;
+	--columbia-blue: #E5E5E5;
+	--midnight-green: #323135;
+	--yellow: #bcbcbc;
+	
+	}
 
 	*,
 	*::before,
@@ -149,18 +59,23 @@
 	color: inherit;
 	}
 
+	img {
+	max-width: 50%;
+	height: auto;
+	}
+
 	body {
-	font: normal 16px/1.5 "Helvetica Neue", sans-serif;
-	background: #d3d3d3;
-	color: #fff;
+	font: normal 16px/1.5 "Inter", sans-serif;
+	background: var(--columbia-blue);
+	color: var(--black);
+	margin-bottom: 50px;
 	}
 
 	/* .section SECTION
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 	.section {
-	background: #808080;
-	padding: 15px 0;
+	padding: 0px 0;
 	}
 
 	.section .container {
@@ -172,6 +87,7 @@
 
 	.section h1 {
 	font-size: 2.5rem;
+	line-height: 1.2;
 	}
 
 	.section h2 {
@@ -182,15 +98,62 @@
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 	.timeline {
+	position: relative;
 	white-space: nowrap;
-	overflow-x: hidden;
+	max-width: 1800px;
+	padding: 0 10px;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns:  auto;
+	grid-gap: 20px;
+	}
+
+	.timeline::before,
+	.timeline::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 30px;
+	width: 100px;
+	z-index: 2;
+	}
+
+	.timeline::after {
+	right: 0;
+	background: linear-gradient(270deg, var(--timeline-gradient));
+	}
+
+	.timeline::before {
+	left: 340px;
+
+	}
+
+
+
+	.timeline ol::-webkit-scrollbar {
+	height: 12px;
+	}
+
+	.timeline ol::-webkit-scrollbar-thumb,
+	.timeline ol::-webkit-scrollbar-track {
+	border-radius: 92px;
+	}
+
+	.timeline ol::-webkit-scrollbar-thumb {
+	background: var(--midnight-green);
+	}
+
+	.timeline ol::-webkit-scrollbar-track {
+	background: var(--yellow);
 	}
 
 	.timeline ol {
 	font-size: 0;
-	width: 100vw;
-	padding: 400px 0;
+	padding: 380px 0;
 	transition: all 1s;
+	overflow-x: scroll;
+	scroll-snap-type: x mandatory;
+	scrollbar-color: var(--yellow) var(--midnight-green);
 	}
 
 	.timeline ol li {
@@ -198,12 +161,13 @@
 	display: inline-block;
 	list-style-type: none;
 	width: 160px;
-	height: 3px;
-	background: #fff;
+	height: 5px;
+	background: var(--white);
+	scroll-snap-align: start;
 	}
 
 	.timeline ol li:last-child {
-	width: 280px;
+	width: 340px;
 	}
 
 	.timeline ol li:not(:first-child) {
@@ -216,11 +180,12 @@
 	top: 50%;
 	left: calc(100% + 1px);
 	bottom: 0;
-	width: 12px;
-	height: 12px;
+	width: 16px;
+	height: 16px;
 	transform: translateY(-50%);
 	border-radius: 50%;
-	background: #000000;
+	background: var(--midnight-green);
+	z-index: 1;
 	}
 
 	.timeline ol li div {
@@ -230,8 +195,9 @@
 	padding: 15px;
 	font-size: 1rem;
 	white-space: normal;
-	color: black;
-	background: white;
+	color: var(--black);
+	background: var(--white);
+	border-radius: 0 10px 10px 10px;
 	}
 
 	.timeline ol li div::before {
@@ -247,12 +213,13 @@
 	.timeline ol li:nth-child(odd) div {
 	top: -16px;
 	transform: translateY(-100%);
+	border-radius: 10px 10px 10px 0;
 	}
 
 	.timeline ol li:nth-child(odd) div::before {
 	top: 100%;
 	border-width: 8px 8px 0 0;
-	border-color: white transparent transparent transparent;
+	border-color: var(--white) transparent transparent transparent;
 	}
 
 	.timeline ol li:nth-child(even) div {
@@ -262,90 +229,34 @@
 	.timeline ol li:nth-child(even) div::before {
 	top: -8px;
 	border-width: 8px 0 0 8px;
-	border-color: transparent transparent transparent white;
+	border-color: transparent transparent transparent var(--white);
 	}
 
 	.timeline time {
 	display: block;
-	font-size: 1.2rem;
+	font-size: 1.4rem;
 	font-weight: bold;
 	margin-bottom: 8px;
-	}
-
-	/* TIMELINE ARROWS
-	–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-	.timeline .arrows {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 20px;
-	}
-
-	.timeline .arrows .arrow__prev {
-	margin-right: 20px;
-	}
-
-	.timeline .disabled {
-	opacity: 0.5;
-	}
-
-	.timeline .arrows img {
-	width: 45px;
-	height: 45px;
+	color: var(--midnight-green);
 	}
 
 	/* GENERAL MEDIA QUERIES
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
-	@media screen and (max-width: 599px) {
-	.timeline ol,
-	.timeline ol li {
-	width: auto;
-	}
-
-	.timeline ol {
-	padding: 0;
-	transform: none !important;
-	}
-
-	.timeline ol li {
+	@media screen and (max-width: 800px) {
+	.timeline {
 	display: block;
-	height: auto;
-	background: transparent;
 	}
 
-	.timeline ol li:first-child {
-	margin-top: 25px;
+	.timeline::before,
+	.timeline::after {
+	width: 50px;
 	}
 
-	.timeline ol li:not(:first-child) {
-	margin-left: auto;
+	.timeline::before {
+	left: 0;
 	}
 
-	.timeline ol li div {
-	position: static;
-	width: 94%;
-	height: auto !important;
-	margin: 0 auto 25px;
-	}
-
-	.timeline ol li:nth-child(odd) div {
-	transform: none;
-	}
-
-	.timeline ol li:nth-child(odd) div::before,
-	.timeline ol li:nth-child(even) div::before {
-	left: 50%;
-	top: 100%;
-	transform: translateX(-50%);
-	border: none;
-	border-left: 1px solid white;
-	height: 25px;
-	}
-
-	.timeline ol li:last-child,
-	.timeline ol li:nth-last-child(2) div::before,
-	.timeline ol li:not(:last-child)::after,
-	.timeline .arrows {
+	.timeline .info {
 	display: none;
 	}
 	}
@@ -355,12 +266,13 @@
 	.page-footer {
 	position: fixed;
 	right: 0;
-	bottom: 20px;
+	bottom: 0;
 	display: flex;
 	align-items: center;
 	padding: 5px;
-	color: black;
-	background: rgba(255, 255, 255, 0.65);
+	z-index: 2;
+	color: var(--black);
+	background: var(--columbia-blue);
 	}
 
 	.page-footer a {
@@ -368,95 +280,84 @@
 	margin-left: 4px;
 	}
 
+
 </style>
 
 
 <section class="section intro">
-  <div class="container">
-    <h1>Environmental History </h1>
-    <p>A non-exaustive timeline of environmental history </p>
-  </div>
+	<div class="container">
+		<h1>Environmental History</h1>
+		<p>
+			A Non-Exaustive Timeline of Critical Events Related to the History Towards Sustainability
+		</p>
+	</div>
 </section>
 
 <section class="timeline">
-  <ol>
-    <li>
-      <div>
-        <time>1980</time> Brundtland Comission: World Comission on Environment and Development.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li></li>
-  </ol>
 
-  <div class="arrows">
-    <button class="arrow arrow__prev disabled" disabled>
-		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-			<path d="M15.293 3.293 6.586 12l8.707 8.707 1.414-1.414L9.414 12l7.293-7.293-1.414-1.414z"/>
-		</svg>
-    </button>
-    <button class="arrow arrow__next">
-		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-			<path d="M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z"/>
-		</svg>
-    </button>
-  </div>
+
+	<ol>
+		<li>
+			<div>
+				<time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+			</div>
+		</li>
+		<li>
+			<div>
+				<time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+			</div>
+		</li>
+		<li></li>
+	</ol>
+
 </section>
-
-
-
-
