--- a/src/pages/Timeline/Timeline.astro
+++ b/src/pages/Timeline/Timeline.astro
@@ -28,8 +28,8 @@
 </script>
 <style>
 
-	@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
+	@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 	:root {
 	--white: #fff;
 	--black: #323135;
@@ -37,7 +37,7 @@
 	--columbia-blue: #E5E5E5;
 	--midnight-green: #323135;
 	--yellow: #bcbcbc;
-	
+
 	}
 
 	*,
@@ -65,7 +65,7 @@
 	}
 
 	body {
-	font: normal 16px/1.5 "Inter", sans-serif;
+	font-family: 'Lora', serif;
 	background: var(--columbia-blue);
 	color: var(--black);
 	margin-bottom: 50px;
