--- a/src/pages/Timeline/Timeline.astro
+++ b/src/pages/Timeline/Timeline.astro
@@ -71,6 +71,9 @@
 	margin-bottom: 50px;
 	}
 
+
+
+
 	/* .section SECTION
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -92,6 +95,12 @@
 
 	.section h2 {
 	font-size: 1.3rem;
+	}
+
+	br {
+	display: block; /* makes it have a width */
+	content: ""; /* clears default height */
+	margin-top: 12px; /* change this to whatever height you want it */
 	}
 
 	/* TIMELINE
@@ -286,9 +295,12 @@
 
 <section class="section intro">
 	<div class="container">
-		<h1>Environmental History</h1>
+		<h1>
+			<b> Environmental History</b>
+		</h1>
+		<br> </br>
 		<p>
-			A Non-Exaustive Timeline of Critical Events Related to the History Towards Sustainability
+			 A Non-Exaustive Timeline of Critical Events Related to the History Towards Sustainability
 		</p>
 	</div>
 </section>
