--- a/src/pages/Timeline/Timeline.astro
+++ b/src/pages/Timeline/Timeline.astro
@@ -74,7 +74,7 @@
 	br {
 	display: block;
 	content: "";
-	margin-top: 12px;
+	margin-top: 6px;
 	}
 
 
@@ -200,9 +200,9 @@
 	.timeline ol li div {
 	position: absolute;
 	left: calc(100% + 7px);
-	width: 280px;
+	width: 320px;
 	padding: 15px;
-	font-size: 1rem;
+	font-size: 0.8rem;
 	white-space: normal;
 	color: var(--black);
 	background: var(--white);
@@ -243,7 +243,7 @@
 
 	.timeline time {
 	display: block;
-	font-size: 1.4rem;
+	font-size: 1rem;
 	font-weight: bold;
 	margin-bottom: 8px;
 	color: var(--midnight-green);
@@ -300,7 +300,7 @@
 		</h1>
 		<br> </br>
 		<p>
-			 A Non-Exaustive Timeline of Critical Events Related to the History Towards Sustainability
+			 A Non-Exaustive Timeline Overview of Critical Events Related to the History Towards Sustainability
 		</p>
 	</div>
 </section>
@@ -311,62 +311,61 @@
 	<ol>
 		<li>
 			<div>
-				<time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos.
+				<time>Early 1700</time>
+				<p> - Hans Karl von Carlowithz coined the term Sustainability</p>
+			</div>
+		</li>
+		
+		<li>
+			<div>
+				<time>1972</time>
+				<p> - UN Conference on the Human Environment (Stockholm)</p>
+				
 			</div>
 		</li>
 		<li>
 			<div>
-				<time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+				<time>1982</time>
+				<p> - Brundtland Comission or UN World Comission on Environment and Development </p>
+				
 			</div>
 		</li>
 		<li>
 			<div>
-				<time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+				<time>1987</time> 
+				<p> - Publication of "Our Common Future" by the Brundtland Comission </p>
+				
 			</div>
 		</li>
 		<li>
 			<div>
-				<time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+				<time>
+					<a href="/Timeline/1992" target="_blank">1992</a>
+				 </time>
+					<p> - Rio Earth Summit or UN Conference on Environment and Development (Rio de Janeiro)
+					</p>
+				<br></br>
+					<p>
+					- Establishment of the "<i>UN Comission on Sustainable Development (CSD)</i>"
+					</p>
+				<br></br>
+				<p>
+					- Non-binding publications: "<i>Agenda 21</i>", "<i>Rio Declaration</i>"  & "<i>Statement of Forest Principles</i>"
+				</p>
+				<br></br>
+				<p>
+					- Legally binding agreements: "<i>Framework Convention on Climate Change (UNFCCC)</i>" & "<i>Convention on Biological Diversity</i>"
+				</p>
+
+
+
 			</div>
 		</li>
 		<li>
 			<div>
-				<time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+				<time>2015</time> <p> - UN Agenda 30: 17 Sustainable Developmental Goals</p>
+				
+				
 			</div>
 		</li>
 		<li></li>
