--- a/src/pages/Timeline/1992.astro
+++ b/src/pages/Timeline/1992.astro
@@ -10,3 +10,21 @@ import HorizontalCard from "../../components/HorizontalCard.astro";
           <div class="text-3xl w-full font-bold mb-2"> 1992 </div>
  </div>
  
+
+
+
+ 1994. Triple Bottom Line Concept (John Elkington). He argued that firms should account for the social and environmental value (or harm) they produce, as much as for their financial performance. This concept was latter critisized by himself and others.
+ 1995. The World Summit on Social Development (Copenhagen) was critical for adding social concerns as an important domain for sustainable development. This vision was finally enderson in the 2002 UN World Summit of Sustainable Developmet in Johannesburg
+ 2000. The millenium Development Goals were a list of 60 aims to be achieved by 2015 and progress should be monitored by international agencies.
+
+ 2002. The Johannesbugh Plan of Implementation and its Declaration defined a non-binding plan for a sustainable development as three distinct processes that are "interdependent and mutually reinforcing pillars"
+ 
+ 2009. The Planetary Boundaries Framework (Johan Rockstrom). The Framework tries to define the "safe operating spage for humanity" along nie processes, including land-system change, biodiversity loss and climate change. As the model was centered in environmental processes and degradation it was critized. Later Kate Reworth proposed the doughnut concept.
+ 2012. During the Rio+20 conference and in the publication "The Future we Want", they start developing the proposl on the Sustainable Development Goals
+ 2015. The final publication of the Sustainable Development Goals (SDGs). The question whether the SDGs are interlinked and how remained to be elaborated. Kate Raworth proposed the doughnut model and the Stockholm Resilience Center proposed the Wedding Cake Model. 
+ The Wedding Cake Model. It was elaborated by the Stockholm Resilience Cente r and it consisted on a pie of 4 biosphere SDGs that forms the base, upon which eight SDGs related to society rest over. Finally, a smaller pie with the 4 economic SDGs is over it and the last one it is the SDG17, the "partnership across the goals".
+
+
+ Citation
+
+ Lynley Tulloch. "Sustainability was transformed from marginal counter-hegemonic radical movement into a platform for legitimating neoliberal universalizing projects"
