--- a/src/pages/Timeline/Timeline.astro
+++ b/src/pages/Timeline/Timeline.astro
@@ -101,7 +101,15 @@
 	font-size: 1.3rem;
 	}
 
+	#gray-line {
 
+	border-top: 5px solid gray;
+
+	height: 1px;
+
+	width: 1200px;
+
+	}
 
 	/* TIMELINE
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -302,6 +310,10 @@
 		<p>
 			 A Non-Exaustive Timeline Overview of Critical Events Related to the History Towards Sustainability
 		</p>
+		<br> </br>
+		<div id="gray-line">
+
+		</div>
 	</div>
 </section>
 
@@ -358,10 +370,86 @@
 				</p>
 
 
+		<li>
+			<div>
+				<time>1994</time>
+				<p> - Triple Bottom Line Concept (John Elkington)</p>
+
+
+			</div>
+		</li>			
+				
+
+		<li>
+			<div>
+				<time>1995</time>
+				<p> - World Summit on Social Development (Copenhagen)</p>
+
 
 			</div>
 		</li>
+
+				<li>
+					<div>
+						<time>1997</time>
+						<p> - Rio+5 Conference in New York</p>
+						<p> - Publication of the <i>"Millenium Declaration"</i>, which included the "<i>Millenimum Development Goals"</i></p>
+
+					</div>
+				</li>
+
+				<li>
+					<div>
+						<time>2000</time>
+						<p>-Adoption of the  "<i>Millenimum Development Goals"</i> by the UN</p>
+
+					</div>
+				</li>
+
 		<li>
+			<div>
+				<time>2002</time>
+				<p> - Johannesburg Summit: World Summit on Sustainable Development</p>
+				<p> - Adoption of the <i>"Johannesburg Delcaration"</i> and the "<i>Johannesburg Plan of implementation"</i></p>
+
+			</div>
+		</li>
+
+
+
+
+		<li>
+			<div>
+				<time>2009</time>
+				<p> - The Planetary Boundaries Framework (Johan Rockstrom)</p>
+				
+
+			</div>
+		</li>
+				
+				
+		<li>
+			<div>
+				<time>2012</time>
+				<p> - Rio+20 conference</p>
+				<p>- Publication of "<i>The future we want</i>"</p>
+
+			</div>
+		</li>
+
+		<li>
+			<div>
+				<time>2014</time>
+				<p> - Zero Draft Working Group: experts charged of drafting the Sustainable Developmental Goals</p>
+				
+				</p>
+
+			</div>
+		</li>
+
+
+
+				<li>
 			<div>
 				<time>2015</time> <p> - UN Agenda 30: 17 Sustainable Developmental Goals</p>
 				
