--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -67,6 +67,24 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  </p></a><br>
 <div class="text-lg"> <p align="justify"><a href="https://pubmed.ncbi.nlm.nih.gov/25017494/" target="_blank">Sanchez CR, Ramos C, Díaz F, <u>Lopez D</u>. <i>Attention-Deficit/Hyperactivity Disorder: prevalence of risk in the scholastic scope of the Canary islands.</i> <b>Actas Esp Psiquiatr</b> 42, 169–175 (2014) </div>
  </p></a>
+
+
+
+
+
+
+   <div class="text-2xl w-full font-bold mb-0 mt-10">Non-peer reviewed articles <font size="2"> (self-published) </font> </div>
+  <div class="divider my-0"></div>
+
+ <div class="text-lg"><p align="justify"><u>Lopez-Rodriguez D</u>.<i> An Environmental History Perspective on Sustainable Economic Growth. May 13, 2023. </i>
+ </p>
+  <a href="/DLopez_Growth.pdf" target="_blank"><text class="text-lg"> <b>Download</b> </text></p></a>
+
+
+
+
+
+
     <div class="text-2xl w-full font-bold mb-0 mt-10">Press releases </div>
   <div class="divider my-0"></div>
 
