--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -4,6 +4,18 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 ---
 
 <BaseLayout title = "CV - David Lopez Rodriguez">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2JEVNPCKR');
+</script>
+
+
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Profile</div>
   </div>
