--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -11,7 +11,15 @@ const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout title = "Contact - David Lopez Rodriguez">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-B2JEVNPCKR');
+</script>
 
  
 <div class="social-icons px-6 my-2 py-2 flex">
