--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -4,6 +4,18 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
 <BaseLayout title = "Publications - David Lopez Rodriguez">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2JEVNPCKR');
+</script>
+
+
   <div> <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> </div>
   
   <div class="divider my-0"></div><p align="justify">
@@ -67,9 +79,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  </p></a><br>
 <div class="text-lg"> <p align="justify"><a href="https://pubmed.ncbi.nlm.nih.gov/25017494/" target="_blank">Sanchez CR, Ramos C, Díaz F, <u>Lopez D</u>. <i>Attention-Deficit/Hyperactivity Disorder: prevalence of risk in the scholastic scope of the Canary islands.</i> <b>Actas Esp Psiquiatr</b> 42, 169–175 (2014) </div>
  </p></a>
-
-
-
 
 
 
