--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,18 @@ const last_posts = posts.slice(0, 3);
 
 <BaseLayout>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2JEVNPCKR');
+</script>
+
+
+
     <div class="pb-12 mt-5">
           <div class="text-4xl font-bold">David Lopez Rodriguez, PhD</div>
           <div class="text-2xl py-2 font-bold">Research fellow - University of Lausanne</div>
