--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,6 +5,15 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <BaseLayout title = "Projects - David Lopez Rodriguez">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2JEVNPCKR');
+</script>
 
  <div>
           <div class="text-3xl w-full font-bold mb-2">Current projects </div>
