--- a/src/pages/p4.astro
+++ b/src/pages/p4.astro
@@ -4,8 +4,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
 
-<BaseLayout title = "Tanycyte Ontogeny - David Lopez Rodriguez">
+<BaseLayout title = "Tanycyte Ontogeny - David Lopez Rodriguez"><script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-B2JEVNPCKR');
+</script>
 
 <div>
           <div class="text-3xl w-full font-bold mb-2">The ontogeny of ependymoglial cells</div>
