--- a/src/pages/p7.astro
+++ b/src/pages/p7.astro
@@ -5,7 +5,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 <BaseLayout title = "EDCs - David Lopez Rodriguez">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-B2JEVNPCKR');
+</script>
 
 <div>
           <div class="text-3xl w-full font-bold mb-2">Cellular and molecular features of EDC exposure</div>
