--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -94,7 +94,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       subtitle= "2016 to 2020 at University of Liege (ULIEGE), Belgium" 
     />
     <TimeLineElement
-      title="M.Sc. in Psychology, Cognition and Experimental Neuroscience"
+      title="M.Sc. in Experimental Neuroscience"
       subtitle="2013 to 2015 at University of Liege (ULIEGE), Belgium"
     />
        <TimeLineElement
@@ -152,13 +152,13 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   
   <li> <a target="_blank">Environmental History. University of Gothenburg, Sweden (15 ECTS) </a> </li>
   <li> <a target="_blank">UCREATE2. Workshop on sustainable entrepreneurship (7 weeks)</a> </li>
-  <li> <a target="_blank">Introduction to Machine learning. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)</a> </li>
+  <li> <a target="_blank">Machine learning. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)</a> </li>
   <li> <a target="_blank">UNIX Shell Scripting for Life Scientists. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)  </a> </li>
   <li> <a target="_blank">Intermediate Python. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)  </a> </li>
   <li> <a target="_blank">Workshop on Epigenomics Data Analysis. CUSO (3 days)  </a> </li>
   <li> <a target="_blank">First Steps in Parallelization with OpenMP. Swiss Institute of Bioinformatics (SIB)  </a> </li>
-  <li> <a target="_blank">Research - A Gentle Introduction to Deep Learning with Python and R.  University of Lausanne (Switzerland) (1 day)  </a> </li>
-  <li> <a target="_blank">DCSR: using HPC cluster and requirements. University of Lausanne (Switzerland) (1 day)  </a> </li>
+   <! -- <li> <a target="_blank">Research - A Gentle Introduction to Deep Learning with Python and R.  University of Lausanne (Switzerland) (1 day)  </a> </li> -->
+  <li> <a target="_blank">HPC cluster. University of Lausanne (Switzerland) (1 day)  </a> </li>
   <li> <a target="_blank">Statistics 1. Resal, University of Lausanne (Switzerland) (1 day)  </a> </li>
   <li> <a target="_blank"> Statistics 2. Resal, University of Lausanne (Switzerland) (1 day) </a> </li>
   </ul>
