--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -157,7 +157,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <li> <a target="_blank">Intermediate Python. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)  </a> </li>
   <li> <a target="_blank">Workshop on Epigenomics Data Analysis. CUSO (3 days)  </a> </li>
   <li> <a target="_blank">First Steps in Parallelization with OpenMP. Swiss Institute of Bioinformatics (SIB)  </a> </li>
-   <! -- <li> <a target="_blank">Research - A Gentle Introduction to Deep Learning with Python and R.  University of Lausanne (Switzerland) (1 day)  </a> </li> -->
+  <li> <a target="_blank">Research - A Gentle Introduction to Deep Learning with Python and R.  University of Lausanne (Switzerland) (1 day)  </a> </li>
   <li> <a target="_blank">HPC cluster. University of Lausanne (Switzerland) (1 day)  </a> </li>
   <li> <a target="_blank">Statistics 1. Resal, University of Lausanne (Switzerland) (1 day)  </a> </li>
   <li> <a target="_blank"> Statistics 2. Resal, University of Lausanne (Switzerland) (1 day) </a> </li>
